bin_PROGRAMS = scorched3d

scorched3d_SOURCES = \
	./main.cpp \
	./ScorchedParams.cpp \
	./ScorchedParams.h \
	../wxdialogs/CreateDialogs.cpp \
	../wxdialogs/DialogUtils.cpp \
	../wxdialogs/DialogUtils.h \
	../wxdialogs/DisplayDialog.cpp \
	../wxdialogs/DisplayDialog.h \
	../wxdialogs/KeyDialog.cpp \
	../wxdialogs/KeyDialog.h \
	../wxdialogs/MainDialog.cpp \
	../wxdialogs/MainDialog.h \
	../wxdialogs/OptionEntrySetter.cpp \
	../wxdialogs/OptionEntrySetter.h \
	../wxdialogs/ServerSDialog.cpp \
	../wxdialogs/ServerSDialog.h \
	../wxdialogs/SettingsDialog.cpp \
	../wxdialogs/SettingsDialog.h \
	../engine/ModDirs.cpp \
	../engine/ModDirs.h \
	../engine/ModFileEntry.cpp \
	../engine/ModFileEntry.h \
	../engine/ModFiles.cpp \
	../engine/ModFiles.h \
	../engine/ModInfo.cpp \
	../engine/ModInfo.h \
	../graph/OptionsDisplay.cpp \
	../graph/OptionsDisplay.h \
	../common/ARGParser.cpp \
	../common/ARGParser.h \
	../common/Clock.cpp \
	../common/Clock.h \
	../common/Defines.cpp \
	../common/Defines.h \
	../common/DefinesAssert.cpp \
	../common/DefinesAssert.h \
	../common/DefinesFile.cpp \
	../common/DefinesFile.h \
	../common/DefinesMath.cpp \
	../common/DefinesMath.h \
	../common/DefinesScorched.cpp \
	../common/DefinesScorched.h \
	../common/DefinesString.cpp \
	../common/DefinesString.h \
	../common/FileLines.cpp \
	../common/FileLines.h \
	../common/FileList.cpp \
	../common/FileList.h \
	../common/fixed.cpp \
	../common/fixed.h \
	../common/FixedVector.cpp \
	../common/FixedVector.h \
	../common/Keyboard.cpp \
	../common/Keyboard.h \
	../common/KeyboardHistory.h \
	../common/KeyboardKey.cpp \
	../common/KeyboardKey.h \
	../common/KeyTranslate.h \
	../common/KeyTranslateWx.h \
	../common/Logger.cpp \
	../common/Logger.h \
	../common/LoggerI.cpp \
	../common/LoggerI.h \
	../common/NumberParser.cpp \
	../common/NumberParser.h \
	../common/OptionEntry.cpp \
	../common/OptionEntry.h \
	../common/OptionsGame.cpp \
	../common/OptionsGame.h \
	../common/OptionsMasterListServer.cpp \
	../common/OptionsMasterListServer.h \
	../common/OptionsParameters.cpp \
	../common/OptionsParameters.h \
	../common/ProgressCounter.cpp \
	../common/ProgressCounter.h \
	../common/RandomGenerator.cpp \
	../common/RandomGenerator.h \
	../common/snprintf.c \
	../common/Vector.cpp \
	../common/Vector.h \
	../common/Vector4.cpp \
	../common/Vector4.h \
	../common/VectorLib.cpp \
	../common/VectorLib.h \
	../net/NetBuffer.cpp \
	../net/NetBuffer.h \
	../net/NetInterface.cpp \
	../net/NetInterface.h \
	../net/UniqueIdStore.cpp \
	../net/UniqueIdStore.h \
	../XML/ascii.h \
	../XML/asciitab.h \
	../XML/expat.h \
	../XML/expat_config.h \
	../XML/iasciitab.h \
	../XML/internal.h \
	../XML/latin1tab.h \
	../XML/nametab.h \
	../XML/utf8tab.h \
	../XML/winconfig.h \
	../XML/XMLFile.cpp \
	../XML/XMLFile.h \
	../XML/XMLNode.cpp \
	../XML/XMLNode.h \
	../XML/xmlparse.c \
	../XML/XMLParser.cpp \
	../XML/XMLParser.h \
	../XML/xmlrole.c \
	../XML/xmlrole.h \
	../XML/XMLStringBuffer.cpp \
	../XML/XMLStringBuffer.h \
	../XML/xmltok.c \
	../XML/xmltok.h \
	../tankai/TankAINames.cpp \
	../tankai/TankAINames.h \
	../landscapedef/LandscapeDefinitionsBase.cpp \
	../landscapedef/LandscapeDefinitionsBase.h

AM_CPPFLAGS = -I../porting -I.. @WX_CFLAGS@ @FT2_CFLAGS@ @SDL_CFLAGS@
LDADD = @WX_LIBS@ @FT2_LIBS@ @SDL_LIBS@

